# ScalableXplainLibrary

./: .gitignore  FUNCTIONS.md  Guide.md  README.md  requirements.txt
scalableXplain/: .gitignore  pyproject.toml
scalableXplain/explainers/: abstract_explainer.py
scalableXplain/explainers/distributed/: distributed_explainer.py  distributed_kernel_shap.py  distributed_lime.py  distributed_shap.py  distributed_treeshap.py
scalableXplain/explainers/single_node/: single_node_explainer.py  single_node_treeshap.py
scalableXplain/explainers/single_node/feature_importance/: single_node_kernelshap.py  single_node_lime.py  single_node_shap.py  single_node_treeshap.py  sn_feature_importance.py
scalableXplain/explanations/: abstract_explanation.py  feature_importance_explanation.py
scalableXplain/notebooks/: Imm.ipynb  KernelShap.ipynb  Lime.ipynb  imm_tree
scalableXplain/plots/: abstract_plot.py  bar_plot.py  beeswarm_plot.py  tree_plot.py
scalableXplain/src/python/scalablexplain.egg-info/: SOURCES.txt  top_level.txt
scalableXplain/tests/: .gitignore  demo_kernel_shap_explainer.py  demo_lime.py  demo_spark_kernel_shap.py  demo_spark_lime.py  imm_tree.dot  test_dimm.py  test_iris_shap_force_plot.html  test_kernel_shap.py  test_kernelshap_distributed_explainer.py  test_lime_single_node_explainer.py  test_shap_distributed_explainer_2.py  test_shap_single_node_explainer.py  test_shap_single_node_explainer_2.py  test_sn2.py  test_tabularlime_distributed_explainer.py  test_treeshap_distributed_explainer.py  test_treeshap_single_node_explainer.py
test_pyspark/: test.py
(+45 files in other folders)
