[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scalablexplain"
version = "0.1.0"
description = "Scalable Explainability for PySpark using IMM"
authors = [{name = "Your Name", email = "your@email.com"}]
dependencies = ["pyspark>=3.5.1"]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src/python"}
packages = ["scalablexplain",
            "scalablexplain.imm",
            "scalablexplain.kernel_shap",
            "scalablexplain.lime"]
